tests/machine/x/ocaml/string_prefix_slice.ml
(* Generated by Mochi compiler v0.10.28 on 2025-07-18T08:14:09Z *)
let string_slice s i j = String.sub s i (j - i)


let prefix : string = "fore"
let s1 : string = "forest"
let s2 : string = "desert"

let () =
  print_endline ((string_slice s1 (0) (String.length prefix) = prefix));
  print_endline ((string_slice s2 (0) (String.length prefix) = prefix));
